Added Attachment support for user,guild,channel + switching to docker and flyway for db ops; need to add controller paths for setting up profile pics for user,guild,channel